syntax = "proto3";

package internal_api;

service InternalAPI {
  rpc GetUserByAuthToken(AuthToken) returns (User) {}
  rpc GetUserByProp(UserProp) returns (User) {}
  rpc SetUserProps(UserProps) returns (Error) {}
}

message AuthToken {
  string authToken = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}

message Error {
  bool isOk = 1;
  string msg = 2;
}

message UserProp {
  string name = 1;
  string value = 2;
}

message UserProps {
  oneof user {
    string id = 1;
    string authToken = 2;
  }

  repeated UserProp props = 5;
}
